CHANGELOG RoundCube Webmail
---------------------------

2008/05/12 (alec)
- Updated PEAR::DB package to version 1.7.13

2008/05/10 (alec)
- Make password input fields of type password in installer (#1484886)

2008/05/09 (alec)
- Don't call CAPABILITY if was recieved as server's optional response 
  on connect (RFC3501 [7.1]) 

2008/05/08 (alec)
----------
- Don't attempt to delete cache entries if enable_caching is FALSE (#1485051)
- Optimized messages sorting on servers without sort capability (#1485049)
- Option 'use_SQL_address_book' replaced by 'address_book_type'
- Corrected message headers decoding when charset isn't specified and improved
  support for native languages (#1485050, #1485048)

2008/05/07 (davidke/richs)
----------
- Completed LDAP address book support so it can now write to an LDAP server. 
- Expanded LDAP configuration options to support LDAP server writes.
- Modified config/main.inc.php.dist:
  New Option: $rcmail_config['use_SQL_address_book']
  Changed Option:  $rcmail_config['ldap_public']['Verisign']

2008/05/05 (alec)
----------
- Installer: encode special characters in DB username/password (#1485042)
- Do charset conversion also for from/to column on messages list
- Fix management of folders with national characters in names (#1485036, #1485001)

2008/05/02 (alec)
----------
- Updated MDB2 package to version 2.5.0b1
- Updated MDB2 pgsql, mysql, mysqli, sqlite drivers to version 1.5.0b1
- Updated MDB2 mssql driver to version 1.3.0b1
- Fixed identities saving when using MDB2 pgsql driver (#1485032)

2008/05/01 (alec)
----------
- Fix BCC header reset (#1484997)

2008/04/30 (thomasb)
----------
- Introduce new application class 'rcmail' and get rid of some global vars

2008/04/29 (alec)
----------
- improved messages list performance - patch from Justin Heesemann

2008/04/23 (alec)
----------
- Append skin_path to images location only when it starts 
  with '/' sign (#1484859)

2008/04/20 (estadtherr)
----------